# internhunter

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  BUILD_LOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
.plans/: application-tracker.md  contact-discovery.md  execution-status.md  find-more-internships-and-contacts.md  internhunter.md  upgrade-discovery-quality-contacts.md  upgrade-multi-channel-contacts.md  upgrade-novel-finding.md  upgrade-verifiable-contacts.md
docs/: DEVELOPMENT.md  SETUP.md  adapter-authoring.md
internhunter/: cli.py  export.py  feedback.py  mcp_server.py  outreach.py  referrals.py  scheduler.py  tracker.py
internhunter/apply/: applicant.py  fields.py  guardrails.py  pipeline.py  render.py
internhunter/apply/submit/: base.py  greenhouse.py  lever.py
internhunter/config/: cache.py  connections.yaml  pitch.yaml  profile.yaml  sectors.yaml  settings.py  targets.yaml  validation.py
internhunter/contacts/: __init__.py  channels.py  classify.py  dedup.py  domain.py  runner.py  score.py  select.py  selfcheck.py  types.py
internhunter/core/: browser.py  db.py  dedup.py  fetch.py  internship_filter.py  models.py  normalize.py  rate_limit.py  runner.py
internhunter/discovery/: arbeitsagentur.py  bigco.py  bluesky.py  board_resolve.py  careers.py  common_crawl.py  crt_bulk.py  crt_sh.py  disclosure.py  edgar.py  eures.py  feeds.py  fingerprint.py  github_code.py  google_jobs.py  greenhouse_frontier.py  hackernews.py  handshake.py  idealist.py  indeed.py  internship_lists.py  job_apis.py  jsonld.py  jsonld_listings.py  linkedin.py  linkedin_auth.py  listing_common.py  merge.py  reddit.py  reresolve.py  searxng.py  similar.py  sitemap.py  social_parsing.py  telegram.py  university.py  urlscan.py  usajobs.py  vc.py  wayback.py  (+4 more)
internhunter/dossier/: build.py  pitch.py  research.py
internhunter/llm/: client.py  quality.py  score.py
internhunter/match/: embed.py  prefilter.py  quality.py  rarity.py  score.py  semantic_dedup.py  targets.py
internhunter/notify/: discord.py  email.py  feed.py  ntfy.py  runner.py  select.py  telegram.py
internhunter/registry/: __init__.py  boards.jsonl  universities.jsonl
internhunter/resume/: load.py  tailor.py
internhunter/sessions/: __init__.py  refresh.py  signup.py  store.py  tempmail.py
internhunter/sources/: base.py
internhunter/web/: app.py
migrations/: 0001_init.py
tests/: conftest.py  test_adp.py  test_ashby.py  test_ats_raw.py  test_bamboohr.py  test_bigco.py  test_breezy.py  test_browser.py  test_channels.py  test_comeet.py  test_common_crawl.py  test_contacts_db.py  test_contacts_email.py  test_contacts_people.py  test_contacts_runner.py  test_contacts_score.py  test_contacts_upgrades.py  test_contacts_web.py  test_dedup.py  test_disclosure.py  test_discovery_channels.py  test_dossier_build.py  test_dossier_research.py  test_dover.py  test_edgar.py  test_embed.py  test_fetch_guards.py  test_fingerprint.py  test_gem.py  test_github_code.py  test_greenhouse.py  test_greenhouse_frontier.py  test_hackernews.py  test_harvest_securitytxt.py  test_icims.py  test_identity_dedup.py  test_indeed_handshake.py  test_internship_filter.py  test_internship_lists.py  test_jazzhr.py  (+60 more)
tests/apply/: test_applicant.py  test_auto_apply_record.py  test_cli_apply.py  test_fields.py  test_greenhouse_submit.py  test_guardrails.py  test_lever_submit.py  test_pipeline.py  test_render.py  test_settings.py  test_submit_base.py  test_web_apply.py
tests/resume/: test_tailor.py
(+102 files in other folders)
