[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "internhunter"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "pydantic>=2",
    "pydantic-settings",
    "sqlalchemy>=2",
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "python-multipart",
    "loguru",
    "python-dateutil",
    "beautifulsoup4",
    "lxml",
    "tenacity",
    "pyyaml",
    "numpy",
    "apscheduler",
]

[project.optional-dependencies]
match = ["sentence-transformers"]
browser = ["playwright", "cloakbrowser"]
llm = ["anthropic"]
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
    "ruff",
    "mypy",
    "types-python-dateutil",
    "types-PyYAML",
    "numpy",
]

[project.scripts]
internhunter = "internhunter.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["internhunter"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.ruff.lint.per-file-ignores]
"internhunter/core/browser.py" = ["ASYNC109"]
"tests/test_browser.py" = ["ASYNC109"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["sentence_transformers", "yaml", "playwright.async_api", "cloakbrowser", "anthropic", "apscheduler", "apscheduler.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
